drivers/gpu/drm/i915/display/intel_dp_mst.c
@@ -345,6 +345,8 @@ static void intel_mst_pre_enable_dp(struct intel_encoder *encoder,
 	 */
 	if (INTEL_GEN(dev_priv) < 12 || !first_mst_stream)
 		intel_ddi_enable_pipe_clock(pipe_config);
+
+	intel_ddi_set_dp_msa(pipe_config, conn_state);
 }
 
 static void intel_mst_enable_dp(struct intel_encoder *encoder,
